# devscribe

./: .gitignore  README.md  install.sh  pyproject.toml
devscribe/: __init__.py  ai.py  cli.py  db.py  export.py  hook.py
docs/: index.html
shellscribe/: __init__.py  ai.py  cli.py  db.py  export.py  hook.py
tests/: __init__.py  conftest.py  test_db.py  test_export.py  test_hook.py  test_windows.py
