[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellscribe"
version = "0.1.0"
description = "AI-powered terminal session logger - git log for your whole dev life"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "ShellScribe", email = "hello@shellscribe.dev"}
]
keywords = ["cli", "logging", "terminal", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "peewee>=3.17.0",
    "litellm>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
shellscribe = "shellscribe.cli:app"

[project.urls]
Homepage = "https://github.com/shellscribe/shellscribe"
Documentation = "https://github.com/shellscribe/shellscribe#readme"
Repository = "https://github.com/shellscribe/shellscribe"

[tool.setuptools.packages.find]
where = ["."]
include = ["shellscribe*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
