[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devscribe"
version = "0.1.0"
description = "AI-powered terminal session logger - git log for your whole dev life"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "DevScribe", email = "hello@devscribe.dev"}
]
keywords = ["cli", "logging", "terminal", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "peewee>=3.17.0",
    "litellm>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
devscribe = "devscribe.cli:app"

[project.urls]
Homepage = "https://github.com/luinbytes/devscribe"
Documentation = "https://luinbytes.github.io/devscribe/"
Repository = "https://github.com/luinbytes/devscribe"

[tool.setuptools.packages.find]
where = ["."]
include = ["devscribe*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
